src/test/ui/issues/issue-47486.stderr
error[E0308]: mismatched types
  --> $DIR/issue-47486.rs:2:10
   |
LL |     () < std::mem::size_of::<_>();
   |          ^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `usize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
