src/test/ui/issues/issue-47486.rs
fn main() {
    () < std::mem::size_of::<_>(); //~ ERROR: mismatched types
}
